# mir_eval

./: .codespell_ignore_list  .gitignore  .nojekyll  .travis.yml  README-gh-pages.txt  README.md  README.rst  __init__.py  _config.yml  beat.py  changes.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  segment.py  separation.py  setup.cfg  setup.py
.github/: environment-lint.yml  environment-minimal.yml  environment.yml
.github/workflows/: lint_python.yml  release.yml  test.yaml  test.yml
_sources/: changes.rst.txt  changes.txt  index.rst.txt  index.txt
docs/: Makefile  changes.rst  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
evaluators/: README.md  beat_eval.py  chord_eval.py  eval_utilities.py  key_eval.py  melody_eval.py  multipitch_eval.py  onset_eval.py  pattern_eval.py  segment_eval.py  segment_hier_eval.py  separation_eval.py  tempo_eval.py  transcription_eval.py
mir_eval/: __init__.py  alignment.py  beat.py  boundary.py  chord.py  chords.py  display.py  hierarchy.py  input_output.py  io.py  key.py  melody.py  mm_chord.py  multipitch.py  onset.py  pattern.py  segment.py  separation.py  sonify.py  structure.py  tempo.py  transcription.py  transcription_velocity.py  util.py
tests/: generate_data.py  mpl_ic.py  test_alignment.py  test_beat.py  test_chord.py  test_display.py  test_hierarchy.py  test_input_output.py  test_key.py  test_melody.py  test_multipitch.py  test_onset.py  test_pattern.py  test_segment.py  test_separation.py  test_sonify.py  test_tempo.py  test_transcription.py  test_transcription_velocity.py  test_util.py  util_test.py
tests/data/alignment/: est00.txt  est01.txt  est02.txt  est03_mirex.txt  est04_mirex.txt  output00.json  output01.json  output02.json  output03_mirex.json  output04_mirex.json  ref02.txt  ref03_mirex.txt  ref04_mirex.txt
tests/data/beat/: annotated.beats  bet_scores.pickle  est00.txt  est01.txt  est02.txt  est03.txt  est04.txt  est05.txt  est06.txt  est07.txt  est08.txt  est09.txt  estimated.beats  output00.json  output01.json  output02.json  output03.json  output04.json  output05.json  output06.json  output07.json  output08.json  output09.json  ref00.txt  ref01.txt  ref02.txt  ref03.txt  ref04.txt  ref05.txt  ref06.txt  ref07.txt  ref08.txt  ref09.txt
tests/data/chord/: est00.lab  est01.lab  est02.lab  est03.lab  est04.lab  est05.lab  est06.lab  est07.lab  est08.lab  est09.lab  output00.json  output01.json  output02.json  output03.json  output04.json  output05.json  output06.json  output07.json  output08.json  output09.json  ref00.lab  ref01.lab  ref02.lab  ref03.lab  ref04.lab  ref05.lab  ref06.lab  ref07.lab  ref08.lab  ref09.lab
tests/data/hierarchy/: est00.lab  est01.lab  output_w=05.json  output_w=15.json  (+3 more)
(+320 files in other folders)
