[tool:pytest]
addopts = --cov-report term-missing --cov mir_eval --cov-report=xml


[metadata]
name = mir_eval
version = attr: mir_eval.__version__
description = Common metrics for common audio/music processing tasks.
author = Colin Raffel
author_email = craffel@gmail.com
url = https://github.com/craffel/mir_eval
long_description = file: README.rst
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
python_requires = ">=3.7"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = find:
keywords = audio music mir dsp
install_requires =
    numpy >= 1.7.0
    scipy >= 1.0.0

[options.extras_require]
display = 
    matplotlib >= 1.5.0
testing = 
    matplotlib >= 2.1.0
    decorator
    pytest
    pytest-cov
    pytest-mpl
