[tool:pytest]
addopts = --cov-report term-missing --cov mir_eval --cov-report=xml --mpl --mpl-baseline-path=baseline_images/test_display

[pydocstyle]
# convention = numpy
# Below is equivalent to numpy convention + D400 and D205
ignore = D107,D203,D205,D212,D213,D400,D402,D413,D415,D416,D417

[flake8]
count = True
statistics = True
show_source = True
select =
    E9,
    F63,
    F7,
    F82

[metadata]
name = mir_eval
version = attr: mir_eval.__version__
description = Common metrics for common audio/music processing tasks.
author = Colin Raffel
author_email = craffel@gmail.com
url = https://github.com/craffel/mir_eval
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
python_requires = ">=3.7"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = find:
keywords = audio music mir dsp
install_requires =
    numpy >= 1.15.4
    scipy >= 1.4.0
    decorator

[options.extras_require]
display =
    matplotlib >= 3.3.0
tests =
    matplotlib >= 3.3.0
    pytest
    pytest-cov
    pytest-mpl
